templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name:
  labels:
    app:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host:
      http:
        paths:
          - backend:
              serviceName:
              servicePort:
